--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "chat",
+ 	 	 	"trans": "Chat",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -31,7 +31,7 @@
  	 	"clan": {
  	 	 	"selectDepositAmount": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Gib die Menge an die du einzahlen möchtest",
+ 	 	 	 	 	"trans": "Gib die Menge an, die du einzahlen möchtest",
  	 	 	 	 	"eng": "Please enter amount you want to deposit"
  	 	 	 	},
  	 	 	 	"detail": {
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Du hast einen alten verschlossenen Safe gefunden, sieht aus als wäre dort ein Zettel mit einem Text darauf.",
+ 	 	 	 	"trans": "Du hast einen alten, verschlossenen Safe gefunden. Sieht aus als wäre dort ein Zettel mit einem Text darauf.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
