--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -276,7 +276,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Du hast einen alten, verschlossenen Safe gefunden. Sieht aus als wäre dort ein Zettel mit einem Text darauf.",
+ 	 	 	 	"trans": "Du hast einen alten verschlossenen Safe gefunden, sieht aus als wäre dort ein Zettel mit einem Text darauf.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
