Updated translation for Portuguese (pt)
Corrected a few grammar errors and edited words that fit better.

--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -128,7 +128,7 @@
  	 	 	"colors": {
  	 	 	 	"win": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Descriptografia bem sucedida",
+ 	 	 	 	 	 	"trans": "Descodificação bem sucedida",
  	 	 	 	 	 	"eng": "Decryption successful"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -156,7 +156,7 @@
  	 	 	 	},
  	 	 	 	"lose": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Descriptografia falhou",
+ 	 	 	 	 	 	"trans": "Descodificação falhou",
  	 	 	 	 	 	"eng": "Decryption failed"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Pessoas da Ucrânia, Rússia e todo o mundo estão sofrendo porque a ambição de um homem. \\ N Faça amor vulnerável, não guerra.",
+ 	 	 	 	"trans": "Pessoas da Ucrânia, Rússia e todo o mundo estão sofrendo por causa ambição de um homem. \\ N Faça amor vulnerável, não guerra.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -235,7 +235,7 @@
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "Quantos você gostaria de se retirar do banco?",
+ 	 	 	 	 	"trans": "Quantos você gostaria de retirar do banco?",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	},
  	 	 	 	"selectDeposit": {
@@ -248,7 +248,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"noBalance": {
- 	 	 	 	"trans": "Não é possivel retirar, saldo suficiente.",
+ 	 	 	 	"trans": "Não é possivel retirar, saldo insuficiente.",
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	}
  	 	},
@@ -294,7 +294,7 @@
  	 	},
  	 	"chat": {
  	 	 	"reconnecting": {
- 	 	 	 	"trans": "Restabelecendo a conexão",
+ 	 	 	 	"trans": "Reestabelecendo a conexão",
  	 	 	 	"eng": "Reestablishing connection"
  	 	 	},
  	 	 	"notAtBottom": {
@@ -354,7 +354,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"name"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${name} está prestes a ficar em alguns segundos!",
+ 	 	 	 	 	"trans": "${name} está prestes a acabar em alguns segundos!",
  	 	 	 	 	"eng": "${name} is about to run out in a few seconds!"
  	 	 	 	},
  	 	 	 	"refresh": {
@@ -414,7 +414,7 @@
  	 	 	 	"eng": "Critical Error: Neural Link Disconnected"
  	 	 	},
  	 	 	"progressBarTitle": {
- 	 	 	 	"trans": "Restabelecendo a conexão",
+ 	 	 	 	"trans": "Reestabelecendo a conexão",
  	 	 	 	"eng": "Re-establishing connection"
  	 	 	}
  	 	},
@@ -476,7 +476,7 @@
  	 	 	 	"eng": "links"
  	 	 	},
  	 	 	"premiumShop": {
- 	 	 	 	"trans": "Shop premium",
+ 	 	 	 	"trans": "Loja premium",
  	 	 	 	"eng": "Premium Shop"
  	 	 	},
  	 	 	"friendList": {
@@ -601,7 +601,7 @@
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Não há Lore Comunitário para este item ainda, seja o primeiro a criar um para isso.",
+ 	 	 	 	 	"trans": "Não há Lore Comunitário para este item ainda, seja o primeiro a criar um para ele.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
@@ -673,7 +673,7 @@
  	 	 	 	"eng": "Lock"
  	 	 	},
  	 	 	"lockDescription": {
- 	 	 	 	"trans": "Impede a venda acidental ou destruindo",
+ 	 	 	 	"trans": "Impede a venda acidental ou destruição",
  	 	 	 	"eng": "Prevents accidental selling or destroying"
  	 	 	},
  	 	 	"cantPrintWhileInCombat": {
@@ -688,7 +688,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "Transforme esse cache em uma arma ou item de equipamento que você pode.",
+ 	 	 	 	"trans": "Transforme esse cache em uma arma ou item de equipamento que você pode usar.",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	},
  	 	 	"openContainer": {
@@ -755,7 +755,7 @@
  	 	},
  	 	"notificationCenter": {
  	 	 	"deleteTip": {
- 	 	 	 	"trans": "Pressione longa para excluir",
+ 	 	 	 	"trans": "Pressione e segure para excluir",
  	 	 	 	"eng": "Long press to delete"
  	 	 	}
  	 	},
@@ -768,7 +768,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"hiddenCount"
  	 	 	 	],
- 	 	 	 	"trans": "${hiddenCount} Mais interactáveis podem ser desbloqueados neste local, nível para desbloqueá-los.",
+ 	 	 	 	"trans": "${hiddenCount} Mais interactáveis podem ser desbloqueados neste local, aumente seu nível para desbloqueá-los.",
  	 	 	 	"eng": "${hiddenCount} more interactables can be unlocked at this location, level up to unlock them."
  	 	 	},
  	 	 	"travel": {
@@ -804,7 +804,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "A impressão de equipamentos é baseada na sua classificação de impressão, nivelando sua classificação de impressão imprimindo mais itens",
+ 	 	 	 	 	 	"trans": "A impressão de equipamentos é baseada na sua classificação de impressão, aumente sua classificação de impressão imprimindo mais itens",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -1124,7 +1124,7 @@
  	 	 	 	 	 	"eng": "Improve Printing Rank"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Classificação de impressão Determina o nível do item que você imprime. Ganhe impressão exp de impressão e venda no mercado negro",
+ 	 	 	 	 	 	"trans": "Classificação de impressão Determina o nível do item que você imprime. Ganhe exp de impressão por impressão e venda no mercado negro",
  	 	 	 	 	 	"eng": "Printing Rank determines the level of item you print. Gain printing exp by print & sell in Black Market"
  	 	 	 	 	}
  	 	 	 	},
@@ -1134,7 +1134,7 @@
  	 	 	 	 	 	"eng": "Get even better equipments!"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Seu equipamento atual parece abitado desatualizado pelo seu nível, tente imprimir mais fortes para substituí-los",
+ 	 	 	 	 	 	"trans": "Seu equipamento atual parece um pouco desatualizado pelo seu nível, tente imprimir mais fortes para substituí-los",
  	 	 	 	 	 	"eng": "Your current equipment seems abit outdated for your level, try printing stronger ones to replace them"
  	 	 	 	 	}
  	 	 	 	},
@@ -1553,12 +1553,12 @@
  	 	 	 	 	"eng": "Assign Rank"
  	 	 	 	},
  	 	 	 	"kickPlayer": {
- 	 	 	 	 	"trans": "Kick jogador",
+ 	 	 	 	 	"trans": "Expulsar jogador",
  	 	 	 	 	"eng": "kick player"
  	 	 	 	}
  	 	 	},
  	 	 	"confirmKickMember": {
- 	 	 	 	"trans": "tem certeza que deseja expulsar esse player de sua gangue?",
+ 	 	 	 	"trans": "tem certeza que deseja expulsar esse jogador de sua gangue?",
  	 	 	 	"eng": "are you sure you want to kick this player from your gang?"
  	 	 	},
  	 	 	"memberContribution": {
