--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -3247,6 +3247,10 @@
  	 	 	"trans": "Prestij",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation10": {
+ 	 	 	"trans": "Prestij",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderatör",
  	 	 	"eng": "Moderator"
@@ -3566,6 +3570,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Pembe Neon çerçeveli profil (animasyonlu)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Özel biyografi kilidini aç",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Profilde barkod dekorasyonu",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Çete sloganı özelleştir",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Çete görüntüsünü özelleştir",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Gelecek Güncellemede Daha Fazla Geliyor",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation10": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestij\" Bağış Başlığı",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Profil Resim Özelleştirme Kilidini Aç",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Cadılar Bayramı Sohbet Çerçevesi (Animasyon ile)",
+ 	 	 	 	 	"eng": "Halloween chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Cadılar Bayramı Çerçeveli Profil (Animasyon ile)",
+ 	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Özel biyografi kilidini aç",
@@ -4379,6 +4423,16 @@
  	 	 	 	],
  	 	 	 	"trans": "Düşmanları kör etmek için kullanılabilecek bir flaş bombası. Kaçış şansınızı ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"halloweenItem": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack-O'-Lantern",
+ 	 	 	 	"eng": "Jack-o'-lantern"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "İçeride bir LED tarafından aydınlatılan oyulmuş bir balkabağı. Cadılar Bayramı için dekoratif bir ürün kullanımı.",
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5232,6 +5286,12 @@
  	 	 	"name": {
  	 	 	 	"trans": "AI Çekirdek Küme",
  	 	 	 	"eng": "AI Core Cluster"
+ 	 	 	}
+ 	 	},
+ 	 	"halloween": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack O Lantern",
+ 	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
  	 	"ammo1": {
@@ -6109,6 +6169,60 @@
  	 	"newbieTip": {
  	 	 	"trans": "Zindandaki her kavgadan sonra iyileşmeyeceksiniz, iyileştirici eşyalarınızı kullanmayı unutmayın.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"halloweenPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Mutlu Cadılar Bayramı!",
+ 	 	 	"eng": "Happy Halloween!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Yine yılın ürkütücü zamanı! Shang-Ri-la Cadılar Bayramı'nı özel bir etkinlikle kutluyor!",
+ 	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Düşmanlar ve AI Core Auto Farm, Jack-O-Lanterns'i düşürme şansına sahip olacak! Bunları kilitli efsanevi kaplar yapmak için kullanabilirsiniz!",
+ 	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Cadılar Bayramı sırasında, Time Limited Cyber-Bat sohbet bağış katmanı sunulacak!",
+ 	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
+ 	 	}
+ 	},
+ 	"referralPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "İnanılmaz ödüller almak için arkadaşlarınıza başvurun!",
+ 	 	 	"eng": "Refer your friends to get amazing rewards!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Ücretsiz birim*",
+ 	 	 	"eng": "Free Unit*"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Nadir kilitli kap",
+ 	 	 	"eng": "Rare Locked Container"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Bel çantası",
+ 	 	 	"eng": "Fanny Pack"
+ 	 	},
+ 	 	"instruction": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Nasıl başvurulur?",
+ 	 	 	 	"eng": "How to refer?"
+ 	 	 	},
+ 	 	 	"step1": {
+ 	 	 	 	"trans": "2. bitti, bu!",
+ 	 	 	 	"eng": "2. done, thats it!"
+ 	 	 	}
+ 	 	},
+ 	 	"footnote1": {
+ 	 	 	"trans": "*Arkadaşınız birim satın aldığında% 10 bonus birim alırsınız",
+ 	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
+ 	 	},
+ 	 	"footnote2": {
+ 	 	 	"trans": "*Arkadaşınız Seviye 20'ye ulaştığında, öğe gelen kutunuzdaki zamanları alacaksınız",
+ 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
