--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -3247,6 +3247,10 @@
  	 	 	"trans": "Prestise",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation10": {
+ 	 	 	"trans": "Prestise",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3566,6 +3570,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Profil Berbingkai Neon Merah Muda (dengan animasi)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Dekorasi barcode pada profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Kustomisasi moto geng",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Kustomisasi gambar geng",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Lebih banyak datang di pembaruan mendatang",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation10": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Judul Donasi \"Prestige\"",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Bingkai obrolan Halloween (dengan animasi)",
+ 	 	 	 	 	"eng": "Halloween chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil berbingkai Halloween (dengan animasi)",
+ 	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
@@ -4379,6 +4423,16 @@
  	 	 	 	],
  	 	 	 	"trans": "Granat flash yang dapat digunakan untuk musuh buta. Meningkatkan peluang Anda untuk melarikan diri dengan ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"halloweenItem": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack-O'-Lantern",
+ 	 	 	 	"eng": "Jack-o'-lantern"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Labu berukir yang diterangi oleh LED di dalam. Ini adalah penggunaan barang dekoratif untuk Halloween.",
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5232,6 +5286,12 @@
  	 	 	"name": {
  	 	 	 	"trans": "Ai core cluster",
  	 	 	 	"eng": "AI Core Cluster"
+ 	 	 	}
+ 	 	},
+ 	 	"halloween": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack O Lantern",
+ 	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
  	 	"ammo1": {
@@ -6109,6 +6169,60 @@
  	 	"newbieTip": {
  	 	 	"trans": "Anda tidak akan sembuh setelah setiap pertarungan di Rubanah, ingatlah untuk menggunakan barang penyembuhan Anda.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"halloweenPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Selamat Halloween!",
+ 	 	 	"eng": "Happy Halloween!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Ini adalah waktu seram tahun ini lagi! Shang-ri-la merayakan Halloween dengan acara khusus!",
+ 	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Musuh dan AI Core Auto Farm akan memiliki kesempatan untuk menjatuhkan Jack-O-Lanterns! Anda dapat menggunakannya untuk membuat wadah legendaris yang terkunci!",
+ 	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Selama Halloween, tier donasi obrolan cyber-bat yang terbatas akan tersedia!",
+ 	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
+ 	 	}
+ 	},
+ 	"referralPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Rujuk teman Anda untuk mendapatkan hadiah yang luar biasa!",
+ 	 	 	"eng": "Refer your friends to get amazing rewards!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Unit Gratis*",
+ 	 	 	"eng": "Free Unit*"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Wadah terkunci langka",
+ 	 	 	"eng": "Rare Locked Container"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Paket Fanny",
+ 	 	 	"eng": "Fanny Pack"
+ 	 	},
+ 	 	"instruction": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Bagaimana cara merujuk?",
+ 	 	 	 	"eng": "How to refer?"
+ 	 	 	},
+ 	 	 	"step1": {
+ 	 	 	 	"trans": "2. Selesai, itu saja!",
+ 	 	 	 	"eng": "2. done, thats it!"
+ 	 	 	}
+ 	 	},
+ 	 	"footnote1": {
+ 	 	 	"trans": "*Anda mendapatkan unit bonus 10% kapan pun teman Anda membeli unit",
+ 	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
+ 	 	},
+ 	 	"footnote2": {
+ 	 	 	"trans": "*Anda akan menerima waktu di kotak masuk item Anda saat teman Anda mencapai level 20",
+ 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
