--- a/contribution/lang/nl.json
+++ b/contribution/lang/nl.json
@@ -3247,6 +3247,10 @@
  	 	 	"trans": "Prestige",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation10": {
+ 	 	 	"trans": "Prestige",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3566,6 +3570,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Pink neon ingelijste profiel (met animatie)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Ontgrendel aangepaste bio",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Barcode -decoratie op profiel",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Pas het motto van de bende aan",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Pas de bende -afbeelding aan",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Meer komen in toekomstige update",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation10": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "\"Prestige\" donatietitel",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Ontgrendel profielfoto -aanpassing",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Halloween -chatframe (met animatie)",
+ 	 	 	 	 	"eng": "Halloween chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Halloween ingelijste profiel (met animatie)",
+ 	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Ontgrendel aangepaste bio",
@@ -4379,6 +4423,16 @@
  	 	 	 	],
  	 	 	 	"trans": "Een flash-granaat die kan worden gebruikt voor blinde vijanden. het vergroten van uw kans op ontsnappen door ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"halloweenItem": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Lantaarn",
+ 	 	 	 	"eng": "Jack-o'-lantern"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Een gesneden pompoen die wordt verlicht door een LED -binnen. Het is een decoratief item voor van Halloween.",
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5232,6 +5286,12 @@
  	 	 	"name": {
  	 	 	 	"trans": "Ai core cluster",
  	 	 	 	"eng": "AI Core Cluster"
+ 	 	 	}
+ 	 	},
+ 	 	"halloween": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack O Lantern",
+ 	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
  	 	"ammo1": {
@@ -6109,6 +6169,60 @@
  	 	"newbieTip": {
  	 	 	"trans": "Je zult niet genezen na elk gevecht in Dungeon, vergeet niet om je helende items te gebruiken.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"halloweenPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Fijne Halloween!",
+ 	 	 	"eng": "Happy Halloween!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Het is weer de griezelige tijd van het jaar! Shang-Ri-La viert Halloween met een speciaal evenement!",
+ 	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Vijanden en AI Core Auto Farm krijgen de kans om Jack-O-Lanterns te laten vallen! Je kunt deze gebruiken om vergrendelde legendarische containers te maken!",
+ 	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Tijdens Halloween zal een Time Limited Cyber-Bat Chat Donation-laag beschikbaar zijn!",
+ 	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
+ 	 	}
+ 	},
+ 	"referralPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Verwijs je vrienden om geweldige beloningen te krijgen!",
+ 	 	 	"eng": "Refer your friends to get amazing rewards!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Gratis eenheid*",
+ 	 	 	"eng": "Free Unit*"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Zeldzame gesloten container",
+ 	 	 	"eng": "Rare Locked Container"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Fanny Pack",
+ 	 	 	"eng": "Fanny Pack"
+ 	 	},
+ 	 	"instruction": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Hoe verwijzen je?",
+ 	 	 	 	"eng": "How to refer?"
+ 	 	 	},
+ 	 	 	"step1": {
+ 	 	 	 	"trans": "2. Gedaan, dat is het!",
+ 	 	 	 	"eng": "2. done, thats it!"
+ 	 	 	}
+ 	 	},
+ 	 	"footnote1": {
+ 	 	 	"trans": "*U krijgt 10% bonuseenheid wanneer uw vriend eenheid koopt",
+ 	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
+ 	 	},
+ 	 	"footnote2": {
+ 	 	 	"trans": "*U ontvangt de tijden in uw iteminbox wanneer uw vriend niveau 20 bereikt",
+ 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
