--- a/contribution/lang/ro.json
+++ b/contribution/lang/ro.json
@@ -3247,6 +3247,10 @@
  	 	 	"trans": "Prestigiu",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation10": {
+ 	 	 	"trans": "Prestigiu",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3566,6 +3570,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Profil încadrat de neon roz (cu animație)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Deblocați bio personalizat",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decorarea codurilor de bare pe profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizați motto -ul bandei",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizați imaginea de bandă",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mai multe venind în viitoarea actualizare",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation10": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titlul donației „Prestigiu”",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Deblocați personalizarea imaginii de profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Cadrul de chat de Halloween (cu animație)",
+ 	 	 	 	 	"eng": "Halloween chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil încadrat de Halloween (cu animație)",
+ 	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Deblocați bio personalizat",
@@ -4379,6 +4423,16 @@
  	 	 	 	],
  	 	 	 	"trans": "O grenadă flash care poate fi folosită pentru dușmani orbi. Creșterea șansei de a scăpa de ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"halloweenItem": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack-o'-Lantern",
+ 	 	 	 	"eng": "Jack-o'-lantern"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Un dovleac sculptat care este aprins de un LED în interior. Este un articol decorativ pentru Halloween.",
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5232,6 +5286,12 @@
  	 	 	"name": {
  	 	 	 	"trans": "AI Core cluster",
  	 	 	 	"eng": "AI Core Cluster"
+ 	 	 	}
+ 	 	},
+ 	 	"halloween": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack O Lantern",
+ 	 	 	 	"eng": "Jack O Lantern"
  	 	 	}
  	 	},
  	 	"ammo1": {
@@ -6109,6 +6169,60 @@
  	 	"newbieTip": {
  	 	 	"trans": "Nu vă veți vindeca după fiecare luptă în Dungeon, amintiți-vă să utilizați articolele de vindecare.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"halloweenPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Halloween fericit!",
+ 	 	 	"eng": "Happy Halloween!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Este din nou perioada înfricoșătoare a anului! Shang-ri-La sărbătorește Halloween-ul cu un eveniment special!",
+ 	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Dușmanii și AI Core Auto Farm vor avea șansa de a renunța la Jack-O-Lanterns! Puteți utiliza acestea pentru a crea containere legendare încuiate!",
+ 	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "În timpul Halloween-ului, va fi disponibil un nivel de donație de chat cibernetic limitat de timp!",
+ 	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
+ 	 	}
+ 	},
+ 	"referralPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Consultați -vă prietenii pentru a obține recompense uimitoare!",
+ 	 	 	"eng": "Refer your friends to get amazing rewards!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Unitate gratuită*",
+ 	 	 	"eng": "Free Unit*"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Recipient rar blocat",
+ 	 	 	"eng": "Rare Locked Container"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Borseta",
+ 	 	 	"eng": "Fanny Pack"
+ 	 	},
+ 	 	"instruction": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Cum se referi?",
+ 	 	 	 	"eng": "How to refer?"
+ 	 	 	},
+ 	 	 	"step1": {
+ 	 	 	 	"trans": "1. Puneți-vă prietenul să vă introduceți numele în joc în timpul creării personajelor",
+ 	 	 	 	"eng": "2. done, thats it!"
+ 	 	 	}
+ 	 	},
+ 	 	"footnote1": {
+ 	 	 	"trans": "*Obțineți 10% unitate bonus ori de câte ori prietenul dvs. de cumpărare unitatea de cumpărare",
+ 	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
+ 	 	},
+ 	 	"footnote2": {
+ 	 	 	"trans": "*Veți primi orele în căsuța de e -mail a articolului dvs. atunci când prietenul dvs. atinge nivelul 20",
+ 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
