--- a/contribution/lang/uk.json
+++ b/contribution/lang/uk.json
@@ -3247,6 +3247,10 @@
  	 	 	"trans": "Престиж",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation10": {
+ 	 	 	"trans": "Престиж",
+ 	 	 	"eng": "Prestige"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Модератор",
  	 	 	"eng": "Moderator"
@@ -3566,6 +3570,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Рожевий неоновий профіль (з анімацією)",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Розблокуйте власну біографію",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Прикраса штрих -коду на профілі",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Налаштувати девіз банди",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Налаштувати зображення банди",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Більше майбутнього оновлення",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation10": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Назва пожертвування",
+ 	 	 	 	 	"eng": "\"Prestige\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Розблокувати налаштування зображення профілю",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Хеллоуїн -кадр чату (з анімацією)",
+ 	 	 	 	 	"eng": "Halloween chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Хеллоуїн обрамлений профіль (з анімацією)",
+ 	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Розблокуйте власну біографію",
@@ -4379,6 +4423,16 @@
  	 	 	 	],
  	 	 	 	"trans": "Світлова граната, яка може бути використана для осліплення ворогів. Збільшить ваш шанс втекти від ворога на ${escape}%",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
+ 	 	 	}
+ 	 	},
+ 	 	"halloweenItem": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Jack-o'-ліхтар",
+ 	 	 	 	"eng": "Jack-o'-lantern"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Різьблена гарбуз, яка освітлена світлодіодом всередині. Це декоративний предмет для Хеллоуїна.",
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5435,6 +5489,12 @@
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	}
  	 	},
+ 	 	"halloween": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Джек О ліхтар",
+ 	 	 	 	"eng": "Jack O Lantern"
+ 	 	 	}
+ 	 	},
  	 	"ammo1": {
  	 	 	"vars": [
  	 	 	 	"minLevel"
@@ -6310,6 +6370,60 @@
  	 	"newbieTip": {
  	 	 	"trans": "Здоров'я не відновлюматиметься після кожного бою в підземеллі, не забувайте використовувати ліки та бот-медиків.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
+ 	 	}
+ 	},
+ 	"halloweenPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Щасливого Хеловіну!",
+ 	 	 	"eng": "Happy Halloween!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Це моторошна пора року знову! Шан-Рі-Ла святкує Хеллоуїн із спеціальною подією!",
+ 	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Вороги та AI Core Auto Farm матимуть шанс скинути Джек-О-Літернс! Ви можете використовувати їх для виготовлення замкнених легендарних контейнерів!",
+ 	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Під час Хеллоуїна буде доступний рівень пожертвування чату з кібер-батом!",
+ 	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
+ 	 	}
+ 	},
+ 	"referralPromo": {
+ 	 	"title": {
+ 	 	 	"trans": "Зверніться до своїх друзів, щоб отримати дивовижні нагороди!",
+ 	 	 	"eng": "Refer your friends to get amazing rewards!"
+ 	 	},
+ 	 	"desc1": {
+ 	 	 	"trans": "Безкоштовна одиниця*",
+ 	 	 	"eng": "Free Unit*"
+ 	 	},
+ 	 	"desc2": {
+ 	 	 	"trans": "Рідкісна заблокована ємність",
+ 	 	 	"eng": "Rare Locked Container"
+ 	 	},
+ 	 	"desc3": {
+ 	 	 	"trans": "Фан -пакет",
+ 	 	 	"eng": "Fanny Pack"
+ 	 	},
+ 	 	"instruction": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Як посилатися?",
+ 	 	 	 	"eng": "How to refer?"
+ 	 	 	},
+ 	 	 	"step1": {
+ 	 	 	 	"trans": "1. Попросіть свого друга ввести своє ім’я в грі під час створення персонажів",
+ 	 	 	 	"eng": "2. done, thats it!"
+ 	 	 	}
+ 	 	},
+ 	 	"footnote1": {
+ 	 	 	"trans": "*Ви отримуєте 10% бонусного одиниці, коли ваш друг купує одиницю",
+ 	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
+ 	 	},
+ 	 	"footnote2": {
+ 	 	 	"trans": "*Ви отримаєте час у вхідній скриньці товару, коли ваш друг досягне рівня 20",
+ 	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
  	"reportPlayerModal": {
