--- a/contribution/lang/zh-TW.json
+++ b/contribution/lang/zh-TW.json
@@ -372,18 +372,18 @@
  	 	"clanPage": {
  	 	 	"createClan": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "你不是任何幫派的成員",
+ 	 	 	 	 	"trans": "你不是任何公會的成員",
  	 	 	 	 	"eng": "You are not a member of any gang"
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "當您屬於幫派時，將啟用幫派聊天。",
+ 	 	 	 	 	"trans": "當您屬於公會時，將啟用公會聊天。",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
- 	 	 	 	 	"trans": "創建幫派",
+ 	 	 	 	 	"trans": "成立公會",
  	 	 	 	 	"eng": "Create gang"
  	 	 	 	},
  	 	 	 	"createButtonDescription": {
@@ -391,7 +391,7 @@
  	 	 	 	 	 	"cost",
  	 	 	 	 	 	"currency"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "創建一個幫派 (${cost} ${currency})",
+ 	 	 	 	 	"trans": "成立一個公會 (${cost} ${currency})",
  	 	 	 	 	"eng": "Create a gang for ${cost} ${currency}"
  	 	 	 	}
  	 	 	}
@@ -688,7 +688,7 @@
  	 	 	 	"eng": "Print Cache"
  	 	 	},
  	 	 	"printCacheDescription": {
- 	 	 	 	"trans": "將此快取變成您可以使用的武器或設備物品。",
+ 	 	 	 	"trans": "將此快取變成您可以使用的武器或裝備。",
  	 	 	 	"eng": "Turn this cache into a weapon or equipment item that you can uae."
  	 	 	},
  	 	 	"openContainer": {
@@ -2062,7 +2062,7 @@
  	 	 	 	"eng": "You must be idle to do this action"
  	 	 	},
  	 	 	"noItem": {
- 	 	 	 	"trans": "您當前沒有任何商品出售",
+ 	 	 	 	"trans": "您目前沒有任何商品出售",
  	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
@@ -2224,19 +2224,19 @@
  	 	 	 	"eng": "Select Container"
  	 	 	},
  	 	 	"hint": {
- 	 	 	 	"trans": "解鎖容器以獲取內部的物品，需要少量的技術廢料",
+ 	 	 	 	"trans": "解鎖容器以獲取內部的物品，需要少量的科技碎片",
  	 	 	 	"eng": "Unlock a container to get the items inside, requires small amount of tech scraps"
  	 	 	},
  	 	 	"increaseEpicDropRate": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "提高史詩般的降低率",
+ 	 	 	 	 	"trans": "提高史詩成裝的掉落率",
  	 	 	 	 	"eng": "Increase Epic Tier Drop Rate"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "通過激活${itemName}解鎖鎖定的傳奇容器時，最多收到2％（每個傳奇容器0.5％）獲得Epic Tier Cache的額外機會",
+ 	 	 	 	 	"trans": "透過啟動${itemName}解鎖傳奇已加密容器時，會有額外2％（每個傳奇容器0.5％）獲得史詩成裝的機會",
  	 	 	 	 	"eng": "Receive up to 2% (0.5% per Legendary Container) additional chance to get epic tier cache when unlocking Locked Legendary Container by activating ${itemName}"
  	 	 	 	}
  	 	 	},
@@ -2245,19 +2245,19 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}激活",
+ 	 	 	 	 	"trans": "${itemName}啟動",
  	 	 	 	 	"eng": "${itemName} Activated"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"itemName"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${itemName}現在活躍，解鎖傳奇容器現在有0.5％的epic層設備每個傳奇容器的額外機會",
+ 	 	 	 	 	"trans": "${itemName}已啟動，解鎖傳奇已加密容器會有每個傳奇容器額外0.5％獲得史詩成裝的機會",
  	 	 	 	 	"eng": "${itemName} is now active, unlock Legendary Container now to have 0.5% additional chance for EPIC tier equipment per Legendary Container"
  	 	 	 	}
  	 	 	},
  	 	 	"unlock": {
- 	 	 	 	"trans": "開鎖",
+ 	 	 	 	"trans": "解鎖",
  	 	 	 	"eng": "Unlock"
  	 	 	}
  	 	}
@@ -3464,7 +3464,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自訂公會圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3504,7 +3504,7 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自訂公會圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
@@ -3516,19 +3516,19 @@
  	 	"donation8": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“至尊”捐贈標題",
+ 	 	 	 	 	"trans": "“至尊”贊助頭銜",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "解鎖自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "橙色霓虹燈聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "橙色霓虹聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Orange Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "橙色霓虹燈構造的個人資料（帶有動畫）",
+ 	 	 	 	 	"trans": "橙色霓虹個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3536,7 +3536,7 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
@@ -3544,11 +3544,11 @@
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3556,19 +3556,19 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“聲望”捐贈標題",
+ 	 	 	 	 	"trans": "「至尊」贊助頭銜",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "解鎖自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "粉紅色的霓虹燈聊天框架（帶有動畫）",
+ 	 	 	 	 	"trans": "粉紅色霓虹聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Pink Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "粉紅色的霓虹燈構造的個人資料（帶有動畫）",
+ 	 	 	 	 	"trans": "粉紅色霓虹個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3576,19 +3576,19 @@
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3596,39 +3596,39 @@
  	 	"donation10": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "“至尊”捐贈標題",
+ 	 	 	 	 	"trans": "“至尊”贊助頭銜",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "解鎖個人資料圖片自定義",
+ 	 	 	 	 	"trans": "解鎖自訂個人檔案圖片",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "萬聖節聊天框架（動畫）",
+ 	 	 	 	 	"trans": "萬聖節霓虹聊天外框（內建動畫）",
  	 	 	 	 	"eng": "Halloween chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "萬聖節框架個人資料（帶有動畫）",
+ 	 	 	 	 	"trans": "萬聖節霓虹個人檔案外框（內建動畫）",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "解鎖自定義生物",
+ 	 	 	 	 	"trans": "解鎖自訂個人簡歷",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "輪廓上的條形碼裝飾",
+ 	 	 	 	 	"trans": "配置個人檔案的條碼裝飾",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "定制幫派座右銘",
+ 	 	 	 	 	"trans": "自訂公會座右銘",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "自定義幫派圖像",
+ 	 	 	 	 	"trans": "自訂公會圖片",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "將來更新會有更多",
+ 	 	 	 	 	"trans": "未來會有更多的更新",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3825,7 +3825,7 @@
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "你有頭痛嗎？使用止痛藥來緩解你的疼痛！",
+ 	 	 	 	"trans": "你頭痛嗎？使用止痛藥來緩解你的疼痛！",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -3901,7 +3901,7 @@
  	 	},
  	 	"healing9": {
  	 	 	"name": {
- 	 	 	 	"trans": "傳奇奈米醫生機器人",
+ 	 	 	 	"trans": "傳奇奈米醫療機器人",
  	 	 	 	"eng": "Legendary Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3911,7 +3911,7 @@
  	 	},
  	 	"healing10": {
  	 	 	"name": {
- 	 	 	 	"trans": "史詩奈米醫生機器人",
+ 	 	 	 	"trans": "史詩奈米醫療機器人",
  	 	 	 	"eng": "Epic Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3921,7 +3921,7 @@
  	 	},
  	 	"healing11": {
  	 	 	"name": {
- 	 	 	 	"trans": "至尊奈米醫生機器人",
+ 	 	 	 	"trans": "至尊奈米醫療機器人",
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -4031,11 +4031,11 @@
  	 	},
  	 	"healingArea11": {
  	 	 	"name": {
- 	 	 	 	"trans": "聲望納米醫師無人機",
+ 	 	 	 	"trans": "至尊奈米醫療無人機",
  	 	 	 	"eng": "Prestige Nano medic drone"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "能夠派遣數千台高級納米機器以治愈附近的玩家",
+ 	 	 	 	"trans": "能夠派遣數千台至尊奈米無人機以治療附近的玩家",
  	 	 	 	"eng": "capable of dispatching thousands of advanced nano machines to heal nearby players"
  	 	 	}
  	 	},
@@ -4308,7 +4308,7 @@
  	 	},
  	 	"chatExploitPirate": {
  	 	 	"name": {
- 	 	 	 	"trans": "聊天漏洞發信機[PIRATE]",
+ 	 	 	 	"trans": "聊天漏洞發信器[PIRATE]",
  	 	 	 	"eng": "Chat exploit transmitter [PIRATE]"
  	 	 	},
  	 	 	"description": {
@@ -4318,7 +4318,7 @@
  	 	},
  	 	"chatExploitLeet": {
  	 	 	"name": {
- 	 	 	 	"trans": "聊天漏洞發射機[1337]",
+ 	 	 	 	"trans": "聊天漏洞發信器[1337]",
  	 	 	 	"eng": "Chat exploit transmitter [1337]"
  	 	 	},
  	 	 	"description": {
@@ -4328,7 +4328,7 @@
  	 	},
  	 	"chatExploitUwU": {
  	 	 	"name": {
- 	 	 	 	"trans": "聊天漏洞發射機[uwu]",
+ 	 	 	 	"trans": "聊天漏洞發信器[uwu]",
  	 	 	 	"eng": "Chat exploit transmitter [UwU]"
  	 	 	},
  	 	 	"description": {
@@ -4338,7 +4338,7 @@
  	 	},
  	 	"chatExploitLove": {
  	 	 	"name": {
- 	 	 	 	"trans": "聊天漏洞發射機[Love]",
+ 	 	 	 	"trans": "聊天漏洞發信器[Love]",
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
@@ -4431,7 +4431,7 @@
  	 	 	 	"eng": "Jack-o'-lantern"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "雕刻的南瓜，被LED內部點亮。 這是萬聖節的裝飾物品。",
+ 	 	 	 	"trans": "被LED燈點亮的雕刻南瓜。 這是萬聖節的裝飾物品。",
  	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
  	 	 	}
  	 	},
@@ -6381,15 +6381,15 @@
  	 	 	"eng": "Happy Halloween!"
  	 	},
  	 	"desc1": {
- 	 	 	"trans": "這是一年中的怪異時間！ Shang-Ri-La通過特別活動慶祝萬聖節！",
+ 	 	 	"trans": "又到了每年最古靈精怪的時間！ Shang-Ri-La正在透過特別活動慶祝萬聖節！",
  	 	 	"eng": "Its the spooky time of the year again! Shang-ri-la is celebrating Halloween with a special event!"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "敵人和AI核心汽車農場將有機會放棄千斤頂燈籠！ 您可以使用它們來製作鎖定的傳奇容器！",
+ 	 	 	"trans": "擊敗敵人和部屬AI掛機機器人將有機會獲得傑克燈籠！ 您可以使用它們來製作傳奇已加密容器！",
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "在萬聖節期間，將有限量的網絡蝙蝠聊天捐贈層可用！",
+ 	 	 	"trans": "萬聖節期間限定：賽博蝙蝠聊天外框！",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
@@ -6403,11 +6403,11 @@
  	 	 	"eng": "Free Unit*"
  	 	},
  	 	"desc2": {
- 	 	 	"trans": "稀有鎖定容器",
+ 	 	 	"trans": "稀有已加密容器",
  	 	 	"eng": "Rare Locked Container"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "范妮包",
+ 	 	 	"trans": "腰包",
  	 	 	"eng": "Fanny Pack"
  	 	},
  	 	"instruction": {
@@ -6421,11 +6421,11 @@
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "*每當您的朋友購買單位時，您都會獲得10％的獎金單位",
+ 	 	 	"trans": "*每當您的朋友購買Unit時，您都會獲得10％的額外Unit",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
- 	 	 	"trans": "*當您的朋友達到20級時，您將在物品收件箱中收到時間",
+ 	 	 	"trans": "*當您的朋友達到20級時，您將在物品收件箱中收到獎勵",
  	 	 	"eng": "*You will receive the times in your item inbox when your friend reaches level 20"
  	 	}
  	},
